--- a/catalogo.html
+++ b/catalogo.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Página de Catálogo</h1>
+    <a href="index.html">Ir para a página inicial</a>
 </body>
 </html>
