--- a/blog.html
+++ b/blog.html
@@ -6,9 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página inicial</h1>
-    <p>Sem bem-vindos ao nosso website</p>
-    <a href="catalogo.html">Novo link para o catálogo</a>
-    <a href="blog.html">Acesse o blog</a>
+    <h1>Nossa página de blog</h1>
 </body>
 </html>
